# cellular-automata-visualizer

./: .gitignore  CMakeLists.txt  README.md
src/: automaton.cpp  automaton.h  game_of_life.cpp  game_of_life.h  h_trees.cpp  h_trees.h  main.cpp  seeds.cpp  seeds.h  serviettes.cpp  serviettes.h  visualizer.cpp  visualizer.h
